Add Front login y registro version 1

--- a/Backend GestorTareas/src/main/resources/application.properties
+++ b/Backend GestorTareas/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=GestorTareas
 server.port=8080
 
 
+# Usar variables de entorno?
 spring.datasource.url=jdbc:postgresql://localhost:5432/GestorTareas
 spring.datasource.username=postgres
 spring.datasource.password=1234
