--- a/Frontend GestorTareas/package.json
+++ b/Frontend GestorTareas/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@vue-leaflet/vue-leaflet": "^0.10.1",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.13.1",
+    "leaflet": "^1.9.4",
     "pinia": "^3.0.2",
     "pinia-plugin-persistedstate": "^4.3.0",
     "vue": "^3.5.13",
