--- a/Backend GestorTareas/src/main/resources/application.properties
+++ b/Backend GestorTareas/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8080
 # Usar variables de entorno?
 spring.datasource.url=jdbc:postgresql://localhost:5432/gestortareas
 spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.password=postgres
 
 
 # JWT
