--- a/Backend GestorTareas/src/main/resources/application.properties
+++ b/Backend GestorTareas/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8080
 
 
 # Usar variables de entorno?
-spring.datasource.url=jdbc:postgresql://localhost:5432/gestortareas1
+spring.datasource.url=jdbc:postgresql://localhost:5432/gestortareasprueba
 spring.datasource.username=postgres
 spring.datasource.password=${DB_PASSWORD}
 
