--- a/Backend GestorTareas/src/main/resources/application.properties
+++ b/Backend GestorTareas/src/main/resources/application.properties
@@ -2,10 +2,11 @@ spring.application.name=GestorTareas
 server.port=8080
 
 
-# Usar variables de entorno?
-spring.datasource.url=jdbc:postgresql://localhost:5432/gestortareas
-spring.datasource.username=postgres
-spring.datasource.password=${DB_PASSWORD}
+# Usar variables de entorno
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+
 
 
 # JWT
